--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 </head>
 <body>
-    <heather>
-        <img src=""logo-lanchonete.png" alt="Logo da Lanchonete">
-    </heather>
+    <header>
+        <img src= "logo-lanchonete.png" alt="Logo da Lanchonete">
+    </header>
     <div> 
         <h1>CADASTRO DE PRODUTOS</h1>
     </div>
