--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
     </header>
     <div> 
         <h1>CADASTRO DE PRODUTOS</h1>
+        <p>
+            <label> Produto </label>
+            <input>
+            <p>
+           <label> Preço</label>
+           
+           <input>
+           </p>
+           <label> Ingredientes</label>
+           <textarea></textarea>
+          
+
+           </p>
+           <p>
+            <buttons> Salvar</buttons>
+           </p>
+        </p>
     </div>
     <footer>
         <p> Desenvolvido por <strong>Maria Eduarda</strong></p>
